--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class='navdiv'>
           <div class='name'>Heath Dingus</div>
             <ul>
-              <li><a href='#'>Resume</a></li>
+              <li><a href='https://heathdingus.github.io/Resume-Page/'>Resume</a></li>
               <li>|</li>
               <li><a href='#'>Projects</a></li>
               <li>|</li>
