--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
               <li><a href='https://heathdingus.github.io/Resume-Page/'>Resume</a></li>
               <li>|</li>
-              <li><a href='#'>Projects</a></li>
+              <li><a href='https://heathdingus.github.io/Project-Page/'>Projects</a></li>
               <li>|</li>
               <li><a href='#'>Contact</a></li>
             </ul>
